# wasm-loader

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build-all-plugins.sh  run-tests.sh  test-plugin-build.sh  test-plugins.sh
client/: Cargo.toml
client/src/: main.rs  socket_client.rs
core/: Cargo.toml
core/src/: binary_registry.rs  executor.rs  main.rs  server.rs  socket_core.rs  tracer.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  TRACER_AND_ERROR_HANDLING.md
plugin-counter/: Cargo.toml
plugin-counter/src/: lib.rs
plugin-env-reader/: Cargo.toml
plugin-env-reader/src/: lib.rs
plugin-example/: Cargo.toml
plugin-example/src/: lib.rs  lib_with_errors.rs
plugin-rot13/: Cargo.toml
plugin-rot13/src/: lib.rs
plugin-uppercase/: Cargo.toml
plugin-uppercase/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  plugin_helpers.rs
tests/: Cargo.toml  integration_tests.rs
