[workspace]
members = [
  "core",
  "client",
  "plugin-example",
  "plugin-uppercase",
  "plugin-env-reader",
  "plugin-counter",
  "plugin-rot13",
  "shared",
  "tests",
]
default-members = ["core", "client", "shared", "tests"]
resolver = "2"

[workspace.dependencies]
wasmtime = { version = "26.0.0", features = ["async"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-json-core = "0.6"
uuid = { version = "1.0", features = ["serde"] }
dashmap = "5.5"

[profile.release]
opt-level = "z" # Optimize for size
lto = true      # Enable Link Time Optimization
strip = true    # Strip symbols from binary
