[package]
name = "wasm-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm-client"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
wasm-shared = { path = "../shared" }
