[package]
name = "plugin-env-reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
heapless = "0.8"
byteorder = { version = "1.5", default-features = false }
serde-json-core = "0.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
